--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/ServerBoot.js",
     "start": "node src/ServerBoot.js",
-    "seed": "node src/functions/DBCommands.js",
+    "seed": "node src/functions/dbSeeding.js",
     "start:seed": "npm run start && npm run seed"
   },
   "keywords": [],
