--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon src/ServerBoot.js",
     "start": "node src/ServerBoot.js",
     "seed": "node src/functions/dbSeeding.js",
-    "start:seed": "npm run seed && npm run start"
+    "start:seed": "npm run seed && npm run start",
+    "drop": "node src/functions/dbDropping.js",
+    "drop:seed": "npm run drop && npm run seed"
   },
   "keywords": [],
   "author": "",
