--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bookhaven-part-b-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "jest": {
+    "preset": "@shelf/jest-mongodb"
+  },
   "scripts": {
     "test": "jest",
     "dev": "nodemon src/ServerBoot.js",
@@ -25,6 +28,7 @@
     "mongoose": "^8.8.1"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
